--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,42 @@
 /* Arkusz styli do zadania domowego z RWD */
+
+/* Reset ustawiń */
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 1vw;
+    font-family: 'Verdana', sans-serif;
+}
+
+#photo_container {
+    width: 100vw;
+    height: 70em;
+    background-image: url(../img/man-1.jpg);
+    background-size: 100%;
+    background-position: top left;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+#text_container {
+    height: 180px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    padding-left: 3em;
+}
+
+h1 {
+    font-size: 1.6em;
+    text-transform: uppercase;
+}
+
+span {
+    font-size: 2.4em;
+    text-transform: uppercase;
+}
+
