--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,11 @@
             background-position: top left;
             background-repeat: no-repeat;
             position: relative;
-            overflow: hidden;
         }
 
         #text_container {
             position: absolute;
-            top: 35vw;
+            top: 50vh;
             transform: translateY(-50%);
             color: white;
             padding-left: 3%;
