--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 * {
     margin: 0;
     padding: 0;
+    border: 0;
+    line-height: 1.2;
+    vertical-align: baseline;
+    text-decoration: none;
+    outline: 0;
     font-size: 1vw;
     font-family: 'Verdana', sans-serif;
 }
@@ -14,8 +19,8 @@
             width: 100vw;
             height: 100vh;
             background-image: url(../img/man-1.jpg);
-            background-size: 100%;
-            background-position: top left;
+            background-size: cover;
+            background-position: center;
             background-repeat: no-repeat;
             position: relative;
         }
@@ -25,7 +30,7 @@
             top: 50vh;
             transform: translateY(-50%);
             color: white;
-            padding-left: 3%;
+            left: 3%;
         }
 
         h1 {
@@ -48,7 +53,7 @@
     
         #text_container {
             top: 25%;
-            padding-left: 58%;
+            left: 58%;
         }
 }
 
@@ -56,16 +61,13 @@
 
 @media screen and (max-width: 991px) {
         #photo_container {
-            background-image: url(../img/man-1.jpg);
+/*            background-image: url(../img/man-1.jpg);*/
             height: 50vh;
-            overflow: visible;
         }
         
     #text_container {
             top: 50vh;
-            padding-left: 58%;
             text-align: center;
-            padding: 0;
             left: 0;
             right: 0;
             transform: translateY(0%)
